# scylla-cqlsh

./: .dockerignore  .gitignore  Dockerfile  ESCAPE_FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  SAFE_MODE.md  SSL_INTEGRATION_TESTS_README.md  SSL_TLS_INTEGRATION_TEST_PLAN.md  conftest.py  cqlshlib  install-dependencies.sh  install.sh  pyproject.toml  renovate.json  requirements.txt  setup.cfg  setup.py
.github/workflows/: build-push.yml  create-release.yml  dockerhub-description.yml  ssl-integration-test-example.yml
cqlsh/: __main__.py  cqlsh.py
docs/: SSL_INTEGRATION_TESTS_README.md
docs/plans/: SSL_TLS_INTEGRATION_TEST_PLAN.md
pylib/: cassandra-cqlsh-tests.sh  requirements.txt  setup.py
pylib/cqlshlib/: __init__.py  authproviderhandling.py  copyutil.py  cql3handling.py  formatting.py  pylexotron.py  saferscanner.py  sslhandling.py  util.py
pylib/cqlshlib/test/: basecase.py  cassconnect.py  demo_safe_mode.py  reserved_keywords.txt  run_cqlsh.py  ssl_utils.py  test_authproviderhandling.py  test_compression.py  test_constants.py  test_copyutil.py  test_cql_parsing.py  test_cqlsh_completion.py  test_cqlsh_output.py  test_escape_decoding.py  test_escape_roundtrip.py  test_escape_sequences.py  test_formatting.py  test_keyspace_init.cql  test_legacy_auth.py  test_proxy_access.py  test_safe_mode.py  test_safe_mode_integration.py  test_ssl_integration.py  test_udf_large_input.py  test_util.py  test_vector_formatting.py  udf_commas.cql
reloc/: build_deb.sh  build_reloc.sh  build_rpm.sh
scripts/: create-relocatable-package.py  run-proxy-access-test.sh
(+14 files in other folders)
